--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
     </div>
     <h1>Truth</h1>
 
+    <img src="clubStagephoto-1573585808609-26146616378d.jpg" alt="man performing on stage" id="rapper">
+
 <h2> Join us to find the truth</h2>
     
+
+
+<footer id="bottom">© 2021</footer>
 </body>
 </html>
