new content to about and styles

--- a/About.html
+++ b/About.html
@@ -17,3 +17,37 @@
     </div>
 
     <h1>About US</h1>
+
+<img src="clubDrinkphoto-1566417713940-fe7c737a9ef2.jpg" id="clubDrink"/>
+
+<p id="aboutMe"> We are the premier night club in New York.  We host celebrities at
+our establishment.  We have top performances from the top artists.
+We are always having a good time and you should too.  Join us and 
+come have some fun. </p>
+
+<h2> wild night!</h2>
+
+<img src ="clubPerformancephoto-1574155376612-bfa4ed8aabfd.jpg" id="perform"/>
+<br/>
+<br/>
+<br/>
+
+<h2>Doing what we do</h2>
+<img src="clubPerformance2.jpg" id="performance2"/>
+
+<br/>
+<br/>
+<br/>
+<br/>
+
+
+
+
+
+
+
+
+
+    <footer id="bottom">© 2021</footer>
+</body>
+</html>
