--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <div class= "container">
     <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="About.html">About</a></li>
-        <li><a href="Contact.html">Contact</a></li>
+        <li ><a id="color" href="index.html">Home</a></li>
+        <li><a id ="color" href="About.html">About</a></li>
+        <li><a id="color" href="Contact.html">Contact</a></li>
     </ul>
     </div>
     <h1>Truth</h1>
